Get DC size from GDK window if possible, client size can unfortunately be wrong This should fix wxDC::Clear() not clearing the whole window on Ubuntu 12.04 with overlay scrollbars see #14871

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73185 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775