src/gtk/dcclient.cpp
@@ -2103,7 +2103,10 @@ void wxClientDCImpl::DoGetSize(int *width, int *height) const
 {
     wxCHECK_RET( m_window, wxT("GetSize() doesn't work without window") );
 
-    m_window->GetClientSize( width, height );
+    if (m_window->m_wxwindow && m_gdkwindow)
+        gdk_drawable_get_size(m_gdkwindow, width, height);
+    else
+        m_window->GetClientSize(width, height);
 }
 
 //-----------------------------------------------------------------------------
